# pylocalizer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
