[project]
name = "pylocalizer"
version = "0.1.0"
description = ""
authors = [
    { name = "Chong Zhang", email = "chongzhang@gmail.com" },
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
cmake = "^3.28.4"
pathspec = "0.12.1"
pybind11 = "2.12.0"
pyproject_metadata = "0.7.1"
pytest = "8.1.1"
scikit-build-core = "0.8.2"
taskipy = "^1.12.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

#[tool.ruff.format]
#quote-style = "single"

